--- a/src/IAmBacon/packages/Machine.Specifications.0.9.3/tools/history.txt
+++ b/src/IAmBacon/packages/Machine.Specifications.0.9.3/tools/history.txt
@@ -1,3 +1,11 @@
+Machine.Specifications 0.9.3
+-----------------------------
+- Fixed #170: Exceptions in Cleanup are now reported by failing the test. Previously these exceptions were swallowed.
+
+Machine.Specifications 0.9.2
+-----------------------------
+- Fixed #278 broken shadow copy
+
 Machine.Specifications 0.9.1
 -----------------------------
 - Fixed #255 to re-enable capture output feature.
